# sillyecs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  Taskfile.dist.yaml  tea.yaml
crates/sillyecs/: Cargo.toml
crates/sillyecs-build/: Cargo.toml
crates/sillyecs-build/src/: archetype.rs  code.rs  component.rs  ecs.rs  lib.rs  state.rs  system.rs  system_scheduler.rs  view.rs  world.rs
crates/sillyecs-build/templates/: archetypes.rs.jinja2  systems.rs.jinja2  world.rs.jinja2
crates/sillyecs-build/tests/: build.rs  compile_generated.rs  ecs.yaml
crates/sillyecs-build/tests/fixtures/full_coverage/: ecs.yaml  user.rs
crates/sillyecs/benches/: flatten_slices.rs
crates/sillyecs/src/: entity_id.rs  flatten_copy_slices.rs  flatten_slices.rs  flatten_slices_mut.rs  frame_context.rs  izip.rs  lib.rs  world.rs  world_id.rs
src/: archetype.rs  code.rs  component.rs  ecs.rs  lib.rs  state.rs  system.rs  system_scheduler.rs  world.rs  world.rs.jinja2
templates/: archetypes.rs.jinja2  components.rs.jinja2  systems.rs.jinja2  world.rs.jinja2
tests/: build.rs  ecs.yaml
