[package]
name = "sillyecs"
repository = "git@github.com:sunsided/sillyecs.git"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
minijinja = { version = "2.8.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
