[package]
name = "sillyecs"
description = "A silly little compile-time generated archetype ECS in Rust"
keywords = ["ecs", "archetype", "game-development"]
categories = ["game-development", "game-engines", "development-tools::build-utils"]
homepage = "https://github.com/sunsided/sillyecs"
repository = "https://github.com/sunsided/sillyecs.git"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2"
version = "0.0.1"
edition = "2024"

[dependencies]
minijinja = { version = "2.8.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
