[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "EUPL-1.2"
homepage = "https://github.com/sunsided/sillyecs"
repository = "https://github.com/sunsided/sillyecs.git"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
