[package]
name = "sillyecs-build"
description = "A silly little compile-time generated archetype ECS in Rust"
keywords = ["ecs", "archetype", "game-development"]
categories = ["game-development", "game-engines", "development-tools::build-utils"]
version = "0.0.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
minijinja = { version = "2.20.0", default-features = false, features = ["builtins", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
