[package]
name = "sillyecs"
description = "A silly little compile-time generated archetype ECS in Rust"
keywords = ["ecs", "archetype", "game-development"]
categories = ["game-development", "game-engines"]
homepage = "https://github.com/sunsided/sillyecs"
repository = "https://github.com/sunsided/sillyecs.git"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2"
version = "0.0.6"
edition = "2024"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.1"

[[bench]]
name = "flatten_slices"
harness = false
