[package]
name = "sillyecs"
description = "A silly little compile-time generated archetype ECS in Rust"
keywords = ["ecs", "archetype", "game-development"]
categories = ["game-development", "game-engines"]
version = "0.0.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.1"

[[bench]]
name = "flatten_slices"
harness = false
